test/spec_vectors/local_get/fail/module_6.wat
(module (func $type-param-num-vs-num (param f64 i64) (result f64) (f64.neg (local.get 1))))